<?xml version="1.0"?>
<package>
  <name>dynamixel_joint_state_publisher</name>
  <version>1.0.0</version>
  <description>No description available</description>

  <author email="unkown@unkown.unkown">Patrick Goebel</author>
  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>GPL3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>